tests/fail/execfile__builtin__--AttributeError.py
import __builtin__
__builtin__.execfile
